<resources>
    <string name="app_name">My Application</string>
    <string name="send">Send</string>
    <string name="pass_label">Password</string>
    <string name="name_label">Name</string>
    <string name="password" />
    <string name="wrong" />
    <string name="radio1">English</string>
    <string name="radio2">Spanish</string>
    <string-array name="spinner_array">
        <item>Pick One</item>
        <item>Student</item>
        <item>Staff</item>
        <item>Faculty</item>
    </string-array>
</resources>
