<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.buscis_c2_l11.myapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/nameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/passwordId"
        app:layout_constraintRight_toRightOf="@+id/passwordId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="@+id/passwordId" />

    <Button
        android:id="@+id/sendId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:text="@string/send"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/name_labelId"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp" />

    <TextView
        android:id="@+id/pass_labelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_label"
        android:textSize="18sp"
        android:layout_marginStart="33dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="26dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordId"
        android:layout_marginLeft="33dp" />

    <TextView
        android:id="@+id/name_labelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textSize="18sp"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/passwordId"
        android:layout_marginTop="26dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameId"
        android:layout_marginLeft="37dp" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="120dp"
        android:layout_marginRight="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/flash"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="89dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/nameId"
        app:layout_constraintRight_toRightOf="@+id/nameId"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="89dp" />

    <TextView
        android:id="@+id/wrongId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wrong"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/sendId"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/sendId"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="16dp" />
</android.support.constraint.ConstraintLayout>
